# ai-summarize-api-rust

./: .env.example  .gitignore  Cargo.toml  README.md
migration/src/: lib.rs  m20250316_025730_user_table.rs
src/: main.rs  middleware.rs  routes.rs
src/common/: error.rs
src/driver/: db.rs
src/handler/: auth.rs  file_handler.rs  mod.rs  request.rs  response.rs
src/libs/: hash.rs  jwt.rs  mod.rs  openai.rs
src/model/: users.rs
