[package]
name = "ai-summarize-api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
dotenv = "0.15"
jsonwebtoken = "8"
bcrypt = "0.17.0"
pdf-extract = "0.7"
docx-rust = "0.1.9"
futures= "0.3.17"
bytes = "1.10.0"
reqwest = { version = "0.11", features = ["json"] }